--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="date_size">10dp</dimen>
+    <dimen name="content_padding_start">12dp</dimen>
 </resources>
